fix spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -574,7 +574,11 @@ th[title='Pixels Type'], th[title='Pixels Type'] + td {
 }
 
 .accordion-body {
-    padding: 0.5rem;
+    padding: 0.5rem 0rem;
+}
+
+.inner-accordion .accordion-body {
+    padding: 0rem 1rem;
 }
 
 .inner-accordion .accordion-button:not(.collapsed) {
